# stdsimd-nvptx

./: .travis.yml
ci/: run-docker.sh  run.sh
crates/coresimd/src/: lib.rs
crates/stdsimd-nvptx-host-ptxonly/: Cargo.toml  build.rs
crates/stdsimd-nvptx-host-ptxonly/assets/: reference.ptx
crates/stdsimd-nvptx-host-ptxonly/src/: lib.rs
crates/stdsimd-nvptx-kernels/: Cargo.toml
crates/stdsimd-nvptx-kernels/src/: lib.rs
